# marketdesk-for-ai-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/steering/: product.md  structure.md  tech.md
scripts/: _common.py  _env.py  _schema.py  calendars.py  commodity.py  entry_timing_scorer.py  estimates.py  etf.py  factors.py  filings.py  fundamentals.py  historical.py  insider.py  institutional.py  macro_survey.py  momentum.py  news.py  options.py  quote.py  sector_score.py  sector_stock_screener.py  shorts.py
skills/: AUTHORING.md  INDEX.md  SMOKE_CHECKLIST.md
skills/_envelope/: SKILL.md
skills/_errors/: SKILL.md
skills/_providers/: SKILL.md
skills/calendars/: SKILL.md
skills/commodity/: SKILL.md
skills/entry-timing-scorer/: SKILL.md
skills/estimates/: SKILL.md
skills/etf/: SKILL.md
skills/factors/: SKILL.md
skills/filings/: SKILL.md
skills/fundamentals/: SKILL.md
skills/historical/: SKILL.md
skills/insider/: SKILL.md
skills/institutional/: SKILL.md
skills/macro-snapshot/: SKILL.md
skills/macro_survey/: SKILL.md
skills/momentum/: SKILL.md
skills/news/: SKILL.md
skills/options/: SKILL.md
skills/quote/: SKILL.md
skills/sector-rotation-snapshot/: SKILL.md
skills/sector-stock-screener/: SKILL.md
skills/sector_score/: SKILL.md
skills/shorts/: SKILL.md
skills/single-stock-snapshot/: SKILL.md
tests/: conftest.py
tests/integration/: _sanity.py  _verification_gate.py  conftest.py  test_calendars.py  test_cli_help.py  test_entry_timing_scorer.py  test_estimates.py  test_etf.py  test_factors.py  (+12 more)
(+76 files in other folders)
